--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,7 +32,7 @@ android {
         main.assets.srcDirs += "../dist"
     }
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -40,5 +40,9 @@ android {
 }
 
 dependencies {
-    api "pub.doric:core:$doricSDKVersion"
+    api ("pub.doric:core:$doricSDKVersion") {
+        exclude group: 'com.github.penfeizhou', module: 'jsc4a'
+    }
+    implementation 'com.github.penfeizhou:v84a:0.1.3'
+    implementation fileTree(include: ['*.aar'], dir: 'libs')
 }
