--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -10,7 +10,7 @@ android {
     buildToolsVersion "30.0.3"
     defaultConfig {
         applicationId "pub.doric.android.example"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -36,7 +36,9 @@ android {
         implementation 'androidx.appcompat:appcompat:1.3.1'
         implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
         implementation project(":lib")
-        implementation "pub.doric:devkit:$doricSDKVersion"
+        implementation ("pub.doric:devkit:$doricSDKVersion") {
+            exclude group: 'com.github.penfeizhou', module: 'jsc4a'
+        }
         def multidex_version = "2.0.1"
         implementation "androidx.multidex:multidex:$multidex_version"
     }
