--- a/example/package.json
+++ b/example/package.json
@@ -12,10 +12,11 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "dangle": "file:../",
+    "gl-matrix": "^3.3.0",
     "reflect-metadata": "^0.1.13",
     "rollup": "^2.56.3",
-    "typescript": "^4.4.2",
-    "dangle": "file:../"
+    "typescript": "^4.4.2"
   },
   "optionalDependencies": {
     "ios-deploy": "^1.11.4"
