update pod spec name

--- a/example/iOS/Podfile
+++ b/example/iOS/Podfile
@@ -22,5 +22,5 @@ target 'Example' do
 
   pod 'PINCache'
   
-  pod 'dangle',           :path => '../../'
+  pod 'Dangle',           :path => '../../'
 end
