--- a/example/package.json
+++ b/example/package.json
@@ -12,10 +12,12 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "@types/three": "^0.132.1",
     "dangle": "file:../",
     "gl-matrix": "^3.3.0",
     "reflect-metadata": "^0.1.13",
     "rollup": "^2.56.3",
+    "three": "^0.132.2",
     "typescript": "^4.4.2"
   },
   "optionalDependencies": {
