--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -45,7 +45,13 @@ android {
 }
 
 afterEvaluate {
+    cleanJSBundle.exec()
     buildJSBundle.exec()
+}
+
+task cleanJSBundle(type: Exec) {
+    workingDir project.rootDir.getParent()
+    commandLine 'npm', 'run', 'clean'
 }
 
 task buildJSBundle(type: Exec) {
