--- a/example/package.json
+++ b/example/package.json
@@ -17,6 +17,8 @@
     "gl-matrix": "^3.3.0",
     "reflect-metadata": "^0.1.13",
     "rollup": "^2.56.3",
+    "stardust-core": "^0.2.4",
+    "stardust-webgl": "^0.2.4",
     "three": "^0.132.2",
     "typescript": "^4.4.2"
   },
