--- a/example/android/settings.gradle
+++ b/example/android/settings.gradle
@@ -1,5 +1,5 @@
 include ':app'
-rootProject.name='Example'
+rootProject.name='Dangle'
 
 include ":lib"
 project(":lib").projectDir = file("../../android/lib")
