--- a/example/package.json
+++ b/example/package.json
@@ -12,7 +12,9 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "@types/d3": "^7.0.0",
     "@types/three": "^0.132.1",
+    "d3": "^7.1.1",
     "dangle": "file:../",
     "gl-matrix": "^3.3.0",
     "reflect-metadata": "^0.1.13",
