--- a/example/package.json
+++ b/example/package.json
@@ -12,22 +12,22 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@types/d3": "^7.0.0",
-    "@types/three": "^0.132.1",
     "d3": "^7.1.1",
     "dangle": "file:../",
-    "gl-matrix": "^3.3.0",
+    "gl-matrix": "^3.4.3",
     "reflect-metadata": "^0.1.13",
-    "rollup": "^2.56.3",
+    "rollup": "^2.58.0",
     "stardust-core": "^0.2.4",
     "stardust-webgl": "^0.2.4",
-    "three": "^0.132.2",
-    "typescript": "^4.4.2"
+    "three": "^0.133.1",
+    "typescript": "^4.4.4"
   },
   "optionalDependencies": {
     "ios-deploy": "^1.11.4"
   },
   "devDependencies": {
-    "@rollup/plugin-dsv": "^2.0.2"
+    "@rollup/plugin-dsv": "^2.0.2",
+    "@types/d3": "^7.1.0",
+    "@types/three": "^0.133.1"
   }
 }
