--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "doric": ">=0.9.4",
-    "doric-cli": ">=0.9.4",
+    "doric": "^0.9.10",
+    "doric-cli": "^0.9.10",
     "reflect-metadata": "^0.1.13",
-    "rollup": "^2.56.3",
-    "typescript": "^4.4.2"
+    "rollup": "^2.58.0",
+    "typescript": "^4.4.4"
   },
   "devDependencies": {
     "@rollup/plugin-buble": "^0.21.3",
-    "@rollup/plugin-commonjs": "^20.0.0",
+    "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-image": "^2.1.1",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.0.4"
+    "@rollup/plugin-node-resolve": "^13.0.6"
   },
   "optionalDependencies": {
     "ios-deploy": "^1.11.4"
