v84a bugged with cinema camera, so use jsc4a instead

--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -20,6 +20,13 @@ allprojects {
         mavenCentral()
         maven { url 'https://jitpack.io' }
     }
+    configurations.all {
+        resolutionStrategy {
+            dependencySubstitution {
+                substitute module('com.github.penfeizhou:jsc4a') with project(":jsc4a")
+            }
+        }
+    }
 }
 
 task clean(type: Delete) {
