--- a/android/dangle/build.gradle
+++ b/android/dangle/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'com.facebook.soloader:soloader:0.10.1'
 
-    api 'com.github.penfeizhou:v84a:0.1.3'
+    api 'com.github.penfeizhou:jsc4a:0.2.5'
 //    api project(":jsi-v8")
 //    api project(":jsi-jsc")
 
