--- a/android/lib/build.gradle
+++ b/android/lib/build.gradle
@@ -43,6 +43,6 @@ dependencies {
     api ("pub.doric:core:$doricSDKVersion") {
         exclude group: 'com.github.penfeizhou', module: 'jsc4a'
     }
-    implementation 'com.github.penfeizhou:v84a:0.1.3'
+    implementation 'com.github.penfeizhou:jsc4a:0.2.5'
     implementation project(":dangle")
 }
