--- a/example/package.json
+++ b/example/package.json
@@ -17,6 +17,7 @@
     "dangle": "file:../",
     "gl-matrix": "^3.4.3",
     "opentype.js": "^1.3.4",
+    "pixi.js": "^6.1.3",
     "playcanvas": "^1.50.0",
     "rollup": "^2.60.1",
     "stardust-core": "^0.2.4",
