--- a/example/package.json
+++ b/example/package.json
@@ -15,6 +15,7 @@
     "d3": "^7.1.1",
     "dangle": "file:../",
     "gl-matrix": "^3.4.3",
+    "playcanvas": "^1.50.0",
     "reflect-metadata": "^0.1.13",
     "rollup": "^2.58.0",
     "stardust-core": "^0.2.4",
