--- a/android/lib/build.gradle
+++ b/android/lib/build.gradle
@@ -1,7 +1,7 @@
 import groovy.json.JsonSlurper
 
 def model = new JsonSlurper().parse(new File(project.getProjectDir().parent + "/.." + File.separator + "package.json"))
-def doricSDKVersion = model.dependencies.doric.replace("^", "").replace(">=","")
+def doricSDKVersion = '0.9.24'//model.dependencies.doric.replace("^", "").replace(">=","")
 
 println("Doric Version:" + doricSDKVersion)
 
