--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "doric": "^0.9.22",
+    "doric": "file:../Doric/doric-js",
     "doric-cli": "^0.9.22",
     "rollup": "^2.60.1",
     "typescript": "^4.5.2"
