--- a/example/package.json
+++ b/example/package.json
@@ -15,6 +15,7 @@
     "d3": "^7.1.1",
     "dangle": "file:../",
     "gl-matrix": "^3.4.3",
+    "opentype.js": "^1.3.4",
     "playcanvas": "^1.50.0",
     "rollup": "^2.60.1",
     "stardust-core": "^0.2.4",
