--- a/example/package.json
+++ b/example/package.json
@@ -12,6 +12,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "babylonjs": "^4.2.0",
     "d3": "^7.1.1",
     "dangle": "file:../",
     "gl-matrix": "^3.4.3",
