--- a/example/iOS/Podfile
+++ b/example/iOS/Podfile
@@ -1,8 +1,8 @@
 require "json"
 
-package = JSON.parse(File.read(File.join(__dir__, "../../package.json")))
-version = package['dependencies']["doric"]
-version = version.gsub('^','').gsub('>=','')
+# package = JSON.parse(File.read(File.join(__dir__, "../../package.json")))
+# version = package['dependencies']["doric"]
+# version = version.gsub('^','').gsub('>=','')
 
 source 'https://cdn.cocoapods.org/'
 # Uncomment the next line to define a global platform for your project
@@ -13,8 +13,8 @@ target 'Example' do
   use_modular_headers!
 
   # Pods for TemplateLibrary
-  pod 'DoricCore', "#{version}"
-  pod 'DoricDevkit', "#{version}"
+  pod 'DoricCore', :path => '../../../Doric'
+  pod 'DoricDevkit', :path => '../../../Doric'
   
   pod 'SDWebImage'
 
