--- a/android/dangle/src/main/cpp/CMakeLists.txt
+++ b/android/dangle/src/main/cpp/CMakeLists.txt
@@ -19,8 +19,8 @@ set(CMAKE_CXX_STANDARD 17)
 set(JSI_INCLUDE ${CMAKE_SOURCE_DIR}/../../../../../common)
 include_directories(${JSI_INCLUDE})
 
-set(EXGL_INCLUDE ${CMAKE_SOURCE_DIR}/../../../../../common/exgl)
-include_directories(${EXGL_INCLUDE})
+set(NATIVE_INCLUDE ${CMAKE_SOURCE_DIR}/../../../../../common/dangle)
+include_directories(${NATIVE_INCLUDE})
 
 add_library( # Sets the name of the library.
         dangle
@@ -31,12 +31,12 @@ add_library( # Sets the name of the library.
         # Provides a relative path to your source file(s).
         ${CMAKE_SOURCE_DIR}../../../../../../common/jsi/jsi.cpp
 
-        EXGL.cpp
-        ${CMAKE_SOURCE_DIR}../../../../../../common/exgl/EXGLContext.cpp
-        ${CMAKE_SOURCE_DIR}../../../../../../common/exgl/EXGLImageUtils.cpp
-        ${CMAKE_SOURCE_DIR}../../../../../../common/exgl/EXGLNativeMethods.cpp
-        ${CMAKE_SOURCE_DIR}../../../../../../common/exgl/TypedArrayApi.cpp
-        ${CMAKE_SOURCE_DIR}../../../../../../common/exgl/UEXGL.cpp)
+        DangleJNI.cpp
+        ${CMAKE_SOURCE_DIR}../../../../../../common/dangle/DangleContext.cpp
+        ${CMAKE_SOURCE_DIR}../../../../../../common/dangle/DangleImageUtils.cpp
+        ${CMAKE_SOURCE_DIR}../../../../../../common/dangle/DangleNativeMethods.cpp
+        ${CMAKE_SOURCE_DIR}../../../../../../common/dangle/TypedArrayApi.cpp
+        ${CMAKE_SOURCE_DIR}../../../../../../common/dangle/UDangle.cpp)
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
