--- a/example/package.json
+++ b/example/package.json
@@ -12,6 +12,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "@tweenjs/tween.js": "^18.6.4",
     "@xmldom/xmldom": "^0.7.5",
     "babylonjs": "^4.2.0",
     "d3": "^7.2.1",
@@ -19,6 +20,7 @@
     "gl-matrix": "^3.4.3",
     "opentype.js": "^1.3.4",
     "playcanvas": "^1.51.4",
+    "query-selector": "^2.0.0",
     "rollup": "^2.61.1",
     "stardust-core": "^0.2.4",
     "stardust-webgl": "^0.2.4",
