--- a/example/package.json
+++ b/example/package.json
@@ -15,6 +15,7 @@
     "@tweenjs/tween.js": "^18.6.4",
     "@xmldom/xmldom": "^0.7.5",
     "babylonjs": "^4.2.0",
+    "bunny": "^1.0.1",
     "d3": "^7.2.1",
     "dangle": "file:../",
     "gl-matrix": "^3.4.3",
