--- a/example/package.json
+++ b/example/package.json
@@ -13,28 +13,29 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@tweenjs/tween.js": "^18.6.4",
-    "@xmldom/xmldom": "^0.7.5",
-    "babylonjs": "^4.2.0",
+    "@xmldom/xmldom": "^0.8.0",
+    "babylonjs": "^4.2.1",
     "bunny": "^1.0.1",
-    "d3": "^7.2.1",
+    "d3": "^7.3.0",
     "dangle": "file:../",
     "gl-matrix": "^3.4.3",
     "opentype.js": "^1.3.4",
-    "playcanvas": "^1.51.4",
+    "playcanvas": "^1.51.5",
+    "plotly.js": "^2.8.3",
     "query-selector": "^2.0.0",
     "regl": "^2.1.0",
-    "rollup": "^2.61.1",
+    "rollup": "^2.63.0",
     "stardust-core": "^0.2.4",
     "stardust-webgl": "^0.2.4",
-    "three": "^0.135.0",
-    "typescript": "^4.5.3"
+    "three": "^0.136.0",
+    "typescript": "^4.5.4"
   },
   "optionalDependencies": {
     "ios-deploy": "^1.11.4"
   },
   "devDependencies": {
-    "@rollup/plugin-dsv": "^2.0.2",
+    "@rollup/plugin-dsv": "^2.0.3",
     "@types/d3": "^7.1.0",
-    "@types/three": "^0.135.0"
+    "@types/three": "^0.136.1"
   }
 }
