depends on doric 0.10.0

--- a/android/lib/build.gradle
+++ b/android/lib/build.gradle
@@ -40,9 +40,6 @@ android {
 }
 
 dependencies {
-    api ("pub.doric:core:$doricSDKVersion") {
-        exclude group: 'com.github.penfeizhou', module: 'jsc4a'
-    }
-    implementation 'com.github.penfeizhou:jsc4a:0.2.5'
+    api "pub.doric:core:$doricSDKVersion"
     implementation project(":dangle")
 }
