--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -45,8 +45,8 @@ android {
 }
 
 afterEvaluate {
-    cleanJSBundle.exec()
-    buildJSBundle.exec()
+//    cleanJSBundle.exec()
+//    buildJSBundle.exec()
 }
 
 task cleanJSBundle(type: Exec) {
