--- a/android/dangle/build.gradle
+++ b/android/dangle/build.gradle
@@ -13,7 +13,7 @@ android {
         consumerProguardFiles "consumer-rules.pro"
         externalNativeBuild {
             cmake {
-                cppFlags ""
+                cppFlags "-fPIC"
             }
         }
     }
