--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -1,7 +1,7 @@
 import groovy.json.JsonSlurper
 
 def model = new JsonSlurper().parse(new File(project.rootDir.parentFile.parent + File.separator + "package.json"))
-def doricSDKVersion = model.dependencies.doric.replace("^", "").replace(">=","")
+def doricSDKVersion = model.dependencies.doric.replace("^", "").replace(">=", "")
 
 apply plugin: 'com.android.application'
 
@@ -36,9 +36,7 @@ android {
         implementation 'androidx.appcompat:appcompat:1.3.1'
         implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
         implementation project(":lib")
-        implementation ("pub.doric:devkit:$doricSDKVersion") {
-            exclude group: 'com.github.penfeizhou', module: 'jsc4a'
-        }
+        implementation("pub.doric:devkit:$doricSDKVersion")
         def multidex_version = "2.0.1"
         implementation "androidx.multidex:multidex:$multidex_version"
     }
