--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "doric": "0.10.0",
+    "doric": "^0.10.0",
     "doric-cli": "^0.10.0",
-    "rollup": "^2.66.1",
-    "typescript": "^4.5.5"
+    "rollup": "^2.60.1",
+    "typescript": "^4.5.2"
   },
   "devDependencies": {
     "@rollup/plugin-buble": "^0.21.3",
