--- a/android/dangle/build.gradle
+++ b/android/dangle/build.gradle
@@ -47,3 +47,16 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
+
+
+def version = new File(project.getProjectDir().parent + "/version").text.trim()
+println("Publish version:" + version)
+
+ext {
+    Version = version
+}
+
+def script = project.getProjectDir().parent + "/scripts/upload.gradle"
+if (new File(script).exists()) {
+    apply from: rootProject.file(script)
+}
