--- a/scripts/maven.properties
+++ b/scripts/maven.properties
@@ -1,2 +1,2 @@
-git=https://github.com/doric-pub/DoricFs
-site=https://github.com/doric-pub/DoricFs
+git=https://github.com/doric-pub/Dangle
+site=https://github.com/doric-pub/Dangle
