--- a/android/lib/build.gradle
+++ b/android/lib/build.gradle
@@ -1,35 +1,10 @@
-import groovy.json.JsonSlurper
-
-def model = new JsonSlurper().parse(new File(project.getProjectDir().parent + "/.." + File.separator + "package.json"))
-def doricSDKVersion = model.dependencies.doric.replace("^", "").replace(">=", "")
-
-println("Doric Version:" + doricSDKVersion)
-
-buildscript {
-    repositories {
-        mavenCentral()
-        google()
-    }
-
-    dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.2'
-    }
-}
-
-rootProject.allprojects {
-    repositories {
-        mavenCentral()
-        google()
-    }
-}
-
 apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 31
     buildToolsVersion "31.0.0"
     sourceSets {
-        main.assets.srcDirs += "../dist"
+        main.assets.srcDirs += "../../dist"
     }
     defaultConfig {
         minSdkVersion 21
@@ -40,6 +15,11 @@ android {
 }
 
 dependencies {
-    api "pub.doric:core:$doricSDKVersion"
-    implementation project(":dangle")
+    api "pub.doric:core:${rootProject.ext.DoricVersion}"
+    implementation "pub.doric.dangle:engine:${rootProject.ext.LibVersion}"
+}
+
+def script = project.getProjectDir().parent + "/scripts/upload.gradle"
+if (new File(script).exists()) {
+    apply from: rootProject.file(script)
 }
