--- a/android/dangle/build.gradle
+++ b/android/dangle/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdk 31
-    buildToolsVersion "31.0.0"
+    compileSdkVersion 30
+    buildToolsVersion "30.0.3"
     defaultConfig {
-        minSdk 21
-        targetSdk 31
+        minSdkVersion 21
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
@@ -48,7 +48,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
 
-def script = project.getProjectDir().parent + "/scripts/upload.gradle"
+def script = project.getProjectDir().parent + "/../scripts/upload.gradle"
 if (new File(script).exists()) {
     apply from: rootProject.file(script)
 }
