--- a/android/lib/build.gradle
+++ b/android/lib/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 31
-    buildToolsVersion "31.0.0"
+    compileSdkVersion 30
+    buildToolsVersion "30.0.3"
     sourceSets {
         main.assets.srcDirs += "../../dist"
     }
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 31
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
     }
@@ -19,7 +19,7 @@ dependencies {
     implementation "pub.doric.dangle:engine:${rootProject.ext.LibVersion}"
 }
 
-def script = project.getProjectDir().parent + "/scripts/upload.gradle"
+def script = project.getProjectDir().parent + "/../scripts/upload.gradle"
 if (new File(script).exists()) {
     apply from: rootProject.file(script)
 }
