--- a/scripts/upload.gradle
+++ b/scripts/upload.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'maven'
 
 Properties properties = new Properties()
-properties.load(project.rootProject.file(project.getProjectDir().parent +'/../scripts/maven.properties').newDataInputStream())
+properties.load(project.rootProject.file(project.getProjectDir().parent +'/scripts/maven.properties').newDataInputStream())
 properties.load(new FileInputStream("${projectDir}/pom.properties"))
 
 if (project.rootProject.file("local.properties").exists()) {
