--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,8 @@
     "jsx": "react", /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
     "jsxFactory": "jsx.createElement",
     "jsxFragmentFactory": "jsx.Fragment",
-    // "declaration": true,                   /* Generates corresponding '.d.ts' file. */
-    // "declarationMap": true,                /* Generates a sourcemap for each corresponding '.d.ts' file. */
+    "declaration": true, /* Generates corresponding '.d.ts' file. */
+    // "declarationMap": true, /* Generates a sourcemap for each corresponding '.d.ts' file. */
     "sourceMap": true, /* Generates corresponding '.map' file. */
     // "outFile": "./",                       /* Concatenate and emit output to single file. */
     "outDir": "build/", /* Redirect output structure to the directory. */
@@ -25,7 +25,7 @@
     // "isolatedModules": true,               /* Transpile each file as a separate module (similar to 'ts.transpileModule'). */
     /* Strict Type-Checking Options */
     "strict": true, /* Enable all strict type-checking options. */
-    "noImplicitAny": false,                 /* Raise error on expressions and declarations with an implied 'any' type. */
+    "noImplicitAny": false, /* Raise error on expressions and declarations with an implied 'any' type. */
     // "strictNullChecks": true,              /* Enable strict null checks. */
     // "strictFunctionTypes": true,           /* Enable strict checking of function types. */
     // "strictBindCallApply": true,           /* Enable strict 'bind', 'call', and 'apply' methods on functions. */
@@ -63,6 +63,7 @@
     "**/*.ts",
   ],
   "exclude": [
-    "example/",
+    "build/",
+    "example/"
   ]
 }
