--- a/example/package.json
+++ b/example/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@rollup/plugin-dsv": "^2.0.3",
     "@types/d3": "^7.1.0",
-    "@types/three": "^0.140.0"
+    "@types/three": "^0.140.0",
+    "rollup-plugin-glslify": "^1.2.1"
   }
 }
