--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+  },
+  "devDependencies": {
     "doric": "^0.10.10",
     "doric-cli": "^0.10.10",
     "rollup": "^2.73.0",
-    "typescript": "^4.6.4"
-  },
-  "devDependencies": {
+    "typescript": "^4.6.4",
     "@rollup/plugin-buble": "^0.21.3",
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-image": "^2.1.1",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0"
+  },
+  "peerDependencies": {
+    "doric": ">=0.10.10",
+    "doric-cli": ">=0.10.10"
   }
 }
